<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/introduction_to_number_system_activity_drawer_layout"
    style="@style/mm"
    tools:context="com.example.android.bits20.IntroductionToNumberSystemActivity">

    <LinearLayout android:id="@+id/third_activity_parent_content"
        android:background="@drawable/background_gradient"
        style="@style/mmv">
        
        <android.support.v7.widget.Toolbar
            app:titleTextColor="@color/white"
            android:id="@+id/introduction_to_number_system_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/AppbarTheme">
        </android.support.v7.widget.Toolbar>
        
        <Button android:id="@+id/what_are_numbers_textview"
            android:onClick="onTextViewClicked"
            android:elevation="@dimen/twenty_dips"
            android:textSize="@dimen/eighteen_sp"
            android:text="@string/what_are_numbers"
            style="@style/mw"/>
        <Button android:id="@+id/decimal_number_textview"
            android:onClick="onTextViewClicked"
            android:textSize="@dimen/eighteen_sp"
            android:text="@string/decimal_number_system"
            style="@style/mw"/>
        <Button android:id="@+id/binary_number_textview"
            android:onClick="onTextViewClicked"
            android:textSize="@dimen/eighteen_sp"
            android:text="@string/binary_number_system"
            style="@style/mw"/>
        <Button android:id="@+id/octal_number_textview"
            android:onClick="onTextViewClicked"
            android:textSize="@dimen/eighteen_sp"
            android:text="@string/octal_number_system"
            style="@style/mw"/>
        <Button android:id="@+id/hexadecimal_number_textview"
            android:onClick="onTextViewClicked"
            android:textSize="@dimen/eighteen_sp"
            android:text="@string/hexadecimal_number_system"
            style="@style/mw"/>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        app:itemTextColor="@color/white"
        android:background="@drawable/background_gradient"
        android:id="@+id/introduction_to_number_system_activity_navigation_view"
        style="@style/wm"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/introduction_drawer_menu"
        app:headerLayout="@layout/third_activity_drawer_header"/>


</android.support.v4.widget.DrawerLayout>
