<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/mm"
    android:background="@drawable/background_gradient"
    android:paddingLeft="@dimen/sixty_dips"
    android:paddingRight="@dimen/sixty_dips"
    android:paddingTop="@dimen/sixty_dips"
    tools:context="com.example.android.bits20.SecondActivity">

    <LinearLayout style="@style/mmv">

        <TextView
            android:id="@+id/title_second_activity"
            style="@style/mw"
            android:fontFamily="@font/coiny"
            android:gravity="center"
            android:text="@string/bits"
            android:textSize="@dimen/hundred_sp" />

        <android.support.design.widget.TextInputLayout
            android:padding="@dimen/four_dips"
            android:id="@+id/name_text_input_layout"
            android:background="@drawable/edit_text_round"
            app:hintTextAppearance="@color/black"
            style="@style/mw">

            <android.support.design.widget.TextInputEditText
                android:background="@null"
                android:id="@+id/name_edit_text"
                style="@style/mw"
                android:gravity="center"
                android:textCursorDrawable="@color/black"
                android:layout_marginBottom="@dimen/four_dips"
                android:hint="@string/enter_your_name"
                android:inputType="textShortMessage"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            app:hintTextAppearance="@color/black"
            android:padding="@dimen/four_dips"
            android:id="@+id/email_text_input_layout"
            android:layout_marginTop="@dimen/eight_dips"
            android:background="@drawable/edit_text_round"
            style="@style/mw">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_edit_text"
                style="@style/mw"
                android:gravity="center"
                android:textCursorDrawable="@color/black"
                android:background="@null"
                android:layout_marginBottom="@dimen/four_dips"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/fourteen_sp"/>
        </android.support.design.widget.TextInputLayout>


        <RadioGroup
            android:id="@+id/second_activity_radio_group"
            style="@style/ww"
            android:layout_marginTop="@dimen/eight_dips">

            <RadioButton
                android:id="@+id/male_radio_button"
                style="@style/mw"
                android:buttonTint="@color/black"
                android:fontFamily="sans-serif"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female_radio_button"
                style="@style/mw"
                android:buttonTint="@color/black"
                android:fontFamily="sans-serif"
                android:text="@string/female" />
        </RadioGroup>

        <Button
            android:id="@+id/main_button_one"
            style="@style/mw"
            android:layout_marginTop="@dimen/eight_dips"
            android:alpha="0.40"
            android:fontFamily="@font/coiny"
            android:onClick="toThirdActivity"
            android:text="@string/take_me_to_learner_s_disney"
            android:textAllCaps="false"
            android:textSize="@dimen/fourteen_sp" />

        <LinearLayout
            android:id="@+id/caution_linear_layout"
            style="@style/mwh"
            android:layout_marginTop="@dimen/seventy_dips"
            android:visibility="invisible">

            <ImageView
                style="@style/wm"
                android:contentDescription="@string/caution_image"
                android:src="@drawable/error" />

            <TextView
                android:id="@+id/caution_message_text_view"
                style="@style/mw"
                android:paddingLeft="@dimen/four_dips"
                android:paddingStart="@dimen/four_dips" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
