<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/third_activity_drawer_layout"
    style="@style/mm"
    android:background="@drawable/background_gradient"
    tools:context="com.example.android.bits20.ThirdActivity">

    <LinearLayout
        style="@style/mmv">

        <android.support.v7.widget.Toolbar
            app:titleTextColor="@color/white"
            android:id="@+id/third_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/AppbarTheme" />


        <GridLayout
            android:padding="@dimen/twenty_dips"
            style="@style/mm"
            android:columnCount="2"
            android:rowCount="3">

            <android.support.v7.widget.CardView
                android:id="@+id/first_card_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/eight_dips"
                android:layout_rowWeight="1"
                android:elevation="@dimen/twenty_dips"
                android:onClick="onCardViewClicked"
                app:cardCornerRadius="@dimen/twenty_dips">

                <LinearLayout
                    style="@style/mmv">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/zero_dips"
                        android:layout_weight="5"
                        android:padding="@dimen/four_dips"
                        android:src="@drawable/two" />

                    <View
                        android:layout_marginRight="@dimen/eight_dips"
                        android:layout_marginLeft="@dimen/eight_dips"
                        android:background="@color/grey"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="@dimen/eight_dips"
                        android:text="@string/number_system" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/second_card_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/eight_dips"
                android:layout_rowWeight="1"
                android:elevation="@dimen/twenty_dips"
                android:onClick="onCardViewClicked"
                app:cardCornerRadius="@dimen/twenty_dips">

                <LinearLayout
                    style="@style/mmv">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/zero_dips"
                        android:layout_weight="5"
                        android:padding="@dimen/eight_dips"
                        android:src="@drawable/convert" />

                    <View
                        android:layout_marginRight="@dimen/eight_dips"
                        android:layout_marginLeft="@dimen/eight_dips"
                        android:background="@color/grey"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="@dimen/eight_dips"
                        android:text="@string/conversion_tutorial" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/eight_dips"
                android:layout_rowWeight="1"
                android:onClick="onCardViewClicked"
                android:elevation="@dimen/twenty_dips"
                app:cardCornerRadius="@dimen/twenty_dips">

                <LinearLayout
                    style="@style/mmv">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/zero_dips"
                        android:layout_weight="5"
                        android:padding="@dimen/eight_dips"
                        android:src="@drawable/bi_numthree" />

                    <View
                        android:layout_marginRight="@dimen/eight_dips"
                        android:layout_marginLeft="@dimen/eight_dips"
                        android:background="@color/grey"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <TextView
                        android:textSize="@dimen/twelve_sp"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="@dimen/eight_dips"
                        android:text="@string/complements_tutorial" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/third_card_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/eight_dips"
                android:layout_rowWeight="1"
                android:elevation="@dimen/twenty_dips"
                android:onClick="onCardViewClicked"
                app:cardCornerRadius="@dimen/twenty_dips">

                <LinearLayout
                    style="@style/mmv">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/zero_dips"
                        android:layout_weight="5"
                        android:padding="@dimen/eight_dips"
                        android:src="@drawable/quiz" />

                    <View
                        android:layout_marginRight="@dimen/eight_dips"
                        android:layout_marginLeft="@dimen/eight_dips"
                        android:background="@color/grey"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <TextView
                        android:textSize="@dimen/thirteen_sp"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="@dimen/eight_dips"
                        android:text="@string/test_your_knowledge" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/fourth_card_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/eight_dips"
                android:layout_rowWeight="1"
                android:elevation="@dimen/twenty_dips"
                android:onClick="onCardViewClicked"
                app:cardCornerRadius="@dimen/twenty_dips">

                <LinearLayout
                    style="@style/mmv">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/zero_dips"
                        android:layout_weight="5"
                        android:padding="@dimen/eight_dips"
                        android:src="@drawable/convert_two" />

                    <View
                        android:layout_marginRight="@dimen/eight_dips"
                        android:layout_marginLeft="@dimen/eight_dips"
                        android:background="@color/grey"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="@dimen/eight_dips"
                        android:text="@string/conversion_tab" />
                </LinearLayout>

            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_margin="@dimen/eight_dips"
                android:layout_rowWeight="1"
                android:onClick="onCardViewClicked"
                android:elevation="@dimen/twenty_dips"
                app:cardCornerRadius="@dimen/twenty_dips">

                <LinearLayout
                    style="@style/mmv">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/zero_dips"
                        android:layout_weight="5"
                        android:padding="@dimen/eight_dips"
                        android:src="@drawable/calculator_one" />

                    <View
                        android:layout_marginRight="@dimen/eight_dips"
                        android:layout_marginLeft="@dimen/eight_dips"
                        android:background="@color/grey"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="@dimen/eight_dips"
                        android:text="@string/binary_calculator" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </GridLayout>

    </LinearLayout>



    <android.support.design.widget.NavigationView
        android:id="@+id/third_activity_navigation_view"
        style="@style/wm"
        android:layout_gravity="start"
        android:background="@drawable/background_gradient"
        android:fitsSystemWindows="true"
        app:itemTextColor="@color/white"
        app:headerLayout="@layout/third_activity_drawer_header"
        app:menu="@menu/drawer_menu" />

</android.support.v4.widget.DrawerLayout>
